# pdf2image-web

./: README.md  docker-compose.yml  video.webm
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  upload.tsx
