[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
image = "0.25.8"
zip = "0.6.6"
uuid = { version = "1.7", features = ["v4"] }
serde = { version="1", features=["derive"] }
serde_json = "1"
tokio-util = "0.7"
bytes = "1"
salvo = { version = "0.84.0", features = ["cors", "oapi"] }
pdfium-render = "0.8.35"


[[bin]]
name = "pdf2images_app"
path = "src/main.rs"
